# tasp-libs-microservice

./: .clang-tidy  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sh  requirements-dev.txt  requirements.txt
debian/: control  libtasp-microservice-dev.install  libtasp-microservice.install  libtasp-microservice.links
doc/: config.md
include/tasp/: microservice.hpp
src/: connection.cpp  connection.hpp  microservice.cpp  microservice_impl.cpp  microservice_impl.hpp
src/http/: header_impl.cpp  header_impl.hpp  request_impl.cpp  request_impl.hpp  response_impl.cpp  response_impl.hpp  uri_impl.cpp  uri_impl.hpp
submodule/cmake/: Dependency.cmake  DetectOs.cmake  SetupCompileOptions.cmake  SetupEnvironment.cmake  SetupHardening.cmake  SetupInstall.cmake  Version.cmake
